# HPAS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  NOTES.md  OpenQuestions.md  README.md  notes.md
framework/: CMakeLists.txt
framework/include/framework/: Callbacks.h  Camera.h  DebugRenderData.h  FileDialogs.h  FileReader.h  FontHandler.h  Framework.h  NDArray.h  PMatrixCalculator.h  PlotRenderer.h  SavedSettings.h  ScrollManager.h  Text.h  WindowHandler.h
framework/include/framework/datareaders/: DataReader.h  MNISTReader.h  MyeloidReader.h  NearestNeighbourCalculator.h  PlanariaReader.h
framework/include/framework/shaders/: AbstractShader.h  ComputeShader.h  ComputeShaderInterface.h  Shader.h  ShaderInterface.h
framework/shaders_source/: allDistancesCompute.shader  debugLineFragment.shader  debugLineVertex.shader  debugPointFragment.shader  debugPointVertex.shader  lineFragment.shader  lineVertex.shader  pointFragment2D.shader  pointVertex2D.shader  squareDistancesCompute.shader  textFragment.shader  textVertex.shader
framework/src/: Callbacks.cpp  Camera.cpp  FileDialogs.cpp  FileReader.cpp  FontHandler.cpp  Framework.cpp  PMatrixCalculator.cpp  PlotRenderer.cpp  SavedSettings.cpp  ScrollManager.cpp  Text.cpp  WindowHandler.cpp
framework/src/datareaders/: MNISTReader.cpp  MyeloidReader.cpp  NearestNeighbourCalculator.cpp  PlanariaReader.cpp
framework/src/shaders/: AbstractShader.cpp  ComputeShader.cpp  ComputeShaderInterface.cpp  Shader.cpp  ShaderInterface.cpp
resources/cache/: MNIST0_10000rows_784cols_10perp_P_matrix  Myeloid_1600rows_11cols_10perp_P_matrix  Myeloid_1600rows_11cols_20perp_P_matrix  Myeloid_1600rows_11cols_30perp_P_matrix  Myeloid_1600rows_11cols_40perp_P_matrix  Myeloid_1600rows_11cols_50perp_P_matrix  Myeloid_8000rows_11cols_10perp_P_matrix  Myeloid_8000rows_11cols_20perp_P_matrix
resources/datasets/myeloid8000/: myeloid_8000.csv  myeloid_8000_labels.csv
resources/datasets/planaria/: R_annotation.txt  colors_dataset.txt
src/: Settings.cpp  Settings.h  UserInterface.cpp  UserInterface.h  main.cpp
src/ft/: ft.cpp  ft.h
src/tsne/: PCA.cpp  PCA.h  tsne.cpp  tsne.h
src/tsne/GradientComputers/: FItSNE.h  FiTSNE.cpp  TSNEGradientCompute.cpp  TSNEGradientCompute.h  WrappedFItSNE.h
src/tsne/square_distance/: GPUSquareDistanceCalculator.cpp  GPUSquareDistanceCalculator.h  GridSquareDistanceCalculator.cpp  GridSquareDistanceCalculator.h  NaiveSquareDistanceCalculator.cpp  NaiveSquareDistanceCalculator.h  SquareDistanceCalculator.cpp  SquareDistanceCalculator.h
test/: NDArrayTest.cpp  ft.cpp
